<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.barros.mqttsample.clientfragment.ClientFragment">

    <data>

        <variable
            name="clientViewModel"
            type="com.barros.mqttsample.clientfragment.ClientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cleanClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> clientViewModel.clean()}"
            android:text="@string/clean"
            app:layout_constraintBottom_toTopOf="@+id/preFillClient"
            app:layout_constraintEnd_toEndOf="@+id/unsubscribe"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/subscribe"
            app:layout_constraintTop_toBottomOf="@+id/subscribe"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/preFillClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> clientViewModel.preFill()}"
            android:text="@string/pre_fill"
            app:layout_constraintBottom_toTopOf="@+id/disconnect"
            app:layout_constraintEnd_toEndOf="@+id/unsubscribe"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/subscribe"
            app:layout_constraintTop_toBottomOf="@+id/subscribe"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> clientViewModel.disconnect()}"
            android:text="@string/button_disconnect_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/unsubscribe"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/subscribe" />

        <Button
            android:id="@+id/subscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_subscribe_text"
            app:layout_constraintEnd_toStartOf="@+id/unsubscribe"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/subtopic"
            app:layout_constraintTop_toBottomOf="@+id/subtopic" />

        <Button
            android:id="@+id/unsubscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_unsubscribe_text"
            app:layout_constraintEnd_toEndOf="@+id/subtopic"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/subscribe"
            app:layout_constraintTop_toBottomOf="@+id/subtopic" />

        <Button
            android:id="@+id/publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_publish_text"
            app:layout_constraintEnd_toEndOf="@+id/pubmsg"
            app:layout_constraintStart_toStartOf="@+id/pubmsg"
            app:layout_constraintTop_toBottomOf="@+id/pubmsg" />

        <EditText
            android:id="@+id/pubtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/topic"
            android:ems="15"
            android:hint="@string/topic"
            android:inputType="text"
            android:text="@{clientViewModel.pubTopic}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/puttopicText" />

        <EditText
            android:id="@+id/subtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/message"
            android:ems="15"
            android:hint="@string/message"
            android:inputType="text"
            android:text="@{clientViewModel.subTopic}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtopicText" />

        <EditText
            android:id="@+id/pubmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/topic"
            android:ems="15"
            android:hint="@string/topic"
            android:inputType="text"
            android:text="@{clientViewModel.message}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pubmsgText" />

        <TextView
            android:id="@+id/puttopicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/topic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtopicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/topic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/publish" />

        <TextView
            android:id="@+id/pubmsgText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pubtopic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>